# oxc-browserslist

./: .gitignore  .ignore  .oxfmtrc.json  .rustfmt.toml  .taplo.toml  .typos.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  dprint.json  justfile  knope.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  size_comparison.md  vite.config.ts
.cargo/: config.toml
.github/: codecov.yml  renovate.json
.github/workflows/: CI.yml  autofix.yml  benchmark.yml  ci.yml  codecov.yml  copilot-setup-steps.yml  cron.yml  miri.yml  prepare_release.yml  release.yml  zizmor.yml
benches/: performance_improvements.rs  resolve.rs
examples/: inspect.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: browserslist.rs  fuzz_resolve.rs
src/: compression_test.rs  date.rs  error.rs  generated.rs  lib.rs  opts.rs  parser.rs  parser_new.rs  semver.rs  test.rs  wasm.rs
src/config/: mod.rs  parser.rs
src/data/: caniuse.rs  compression.rs  electron.rs  mod.rs  node.rs
src/data/caniuse/: compression.rs  features.rs  region.rs
src/queries/: browser_accurate.rs  browser_bounded_range.rs  browser_unbounded_range.rs  browserslist_config.rs  cover.rs  cover_by_region.rs  current_node.rs  dead.rs  defaults.rs  electron_accurate.rs  electron_bounded_range.rs  electron_unbounded_range.rs  extends.rs  firefox_esr.rs  last_n_browsers.rs  last_n_electron.rs  last_n_electron_major.rs  last_n_major_browsers.rs  last_n_node.rs  last_n_node_major.rs  last_n_x_browsers.rs  last_n_x_major_browsers.rs  maintained_node.rs  mod.rs  node_accurate.rs  node_bounded_range.rs  node_unbounded_range.rs  op_mini.rs  percentage.rs  percentage_by_region.rs  phantom.rs  since.rs  supports.rs  unreleased_browsers.rs  unreleased_electron.rs  unreleased_x_browsers.rs  years.rs
tests/: extends.rs  parser.rs  proptest.rs  queries.rs
tests/common/: mod.rs
tests/queries/: browser_accurate.rs  browser_bounded_range.rs  browser_unbounded_range.rs  browserslist_config.rs  cover.rs  cover_by_region.rs  current_node.rs  dead.rs  defaults.rs  electron_accurate.rs  electron_bounded_range.rs  electron_unbounded_range.rs  firefox_esr.rs  last_n_browsers.rs  last_n_electron.rs  last_n_electron_major.rs  last_n_major_browsers.rs  last_n_node.rs  last_n_node_major.rs  last_n_x_browsers.rs  last_n_x_major_browsers.rs  maintained_node.rs  node_accurate.rs  node_bounded_range.rs  node_unbounded_range.rs  op_mini.rs  percentage.rs  percentage_by_region.rs  phantom.rs  since.rs  supports.rs  unreleased_browsers.rs  unreleased_electron.rs  unreleased_x_browsers.rs  years.rs
xtask/: Cargo.toml
xtask/src/: caniuse_browsers.rs  caniuse_feature_matching.rs  caniuse_global_usage.rs  caniuse_region_matching.rs  electron_to_chromium.rs  lib.rs  main.rs  node_release_schedule.rs  node_versions.rs
xtask/src/data/: browser.rs  caniuse.rs  caniuse_lite.rs  mod.rs
xtask/src/generators/: electron.rs  mod.rs  node.rs
xtask/src/generators/caniuse/: browsers.rs  features.rs  global_usage.rs  mod.rs  regions.rs
xtask/src/utils/: file.rs  mod.rs  paths.rs
