[package]
name        = "oxc-browserslist"
version     = "1.1.0"
authors     = ["Boshen <boshenc@gmail.com>", "Pig Fang <g-plane@hotmail.com>"]
edition     = "2021"
description = "Rust-ported Browserslist for Oxc."
repository  = "https://github.com/oxc-project/oxc-browserslist"
license     = "MIT"
keywords    = ["javascript", "web"]
categories  = ["config", "web-programming"]
include     = ["/benches", "/examples", "/src"]

[workspace]
members = [".", "xtask"]

[workspace.lints.rust]
unsafe_code                            = "warn"
absolute_paths_not_starting_with_crate = "warn"
non_ascii_idents                       = "warn"
unit-bindings                          = "warn"

[workspace.lints.clippy]
all           = { level = "warn", priority = -1 }
dbg_macro     = "warn"
todo          = "warn"
unimplemented = "warn"
cargo         = { level = "warn", priority = -1 }

[lints]
workspace = true

[lib]
name = "browserslist"

[[bench]]
name    = "resolve"
harness = false

[dependencies]
rustc-hash = "2.0.0"
time       = "0.3.36"
nom        = "7.1"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror  = "1.0"

[dev-dependencies]
pico-args  = "0.5.0"
criterion2 = { version = "1.0.0", default-features = false }
test-case  = "3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys             = { version = "0.3", optional = true }
wasm-bindgen       = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[features]
default      = []
wasm_bindgen = ["js-sys", "serde-wasm-bindgen", "time/wasm-bindgen", "wasm-bindgen"]
codspeed     = ["criterion2/codspeed"]
