[package]
name = "oxc-browserslist"
version = "2.1.4"
authors = ["Boshen <boshenc@gmail.com>", "Pig Fang <g-plane@hotmail.com>"]
categories = ["config", "web-programming"]
edition = "2024"
include = ["/benches", "/examples", "/src"]
keywords = ["javascript", "web"]
license = "MIT"
repository = "https://github.com/oxc-project/oxc-browserslist"
rust-version = "1.85.0"
description = "Rust-ported Browserslist for Oxc."

[workspace]
members = [".", "xtask"]

[workspace.lints.rust]
unsafe_code = "warn"
absolute_paths_not_starting_with_crate = "warn"
non_ascii_idents = "warn"
unit-bindings = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn" # Must be opt-in
print_stderr = "warn" # Must be opt-in
cargo = { level = "warn", priority = -1 }

[workspace.dependencies]
anyhow = "1"
bincode = "3"
criterion2 = { version = "3", default-features = false }
flate2 = "1"
indexmap = "2"
nom = "8.0"
pico-args = "0.5.0"
prettyplease = "0.2.36"
proc-macro2 = "1.0.95"
project-root = "0.2.2"
quote = "1.0"
rustc-hash = "2"
serde = "1.0"
serde_json = "1.0"
syn = "2"
test-case = "3.3"
thiserror = "2.0"
time = "0.3"

[lints]
workspace = true

[lib]
name = "browserslist"

[[bench]]
name = "resolve"
harness = false

[dependencies]
bincode = { workspace = true }
flate2 = { workspace = true }
nom = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
criterion2 = { workspace = true }
pico-args = { workspace = true }
test-case = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[features]
default = []
wasm_bindgen = ["js-sys", "serde-wasm-bindgen", "time/wasm-bindgen", "wasm-bindgen"]
codspeed = ["criterion2/codspeed"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols" # Set to `false` for debug information
debug = false # Set to `true` for debug information
