[package]
name = "browserslist-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
browserslist = { path = "..", package = "oxc-browserslist" }

[[bin]]
name = "fuzz_resolve"
path = "fuzz_targets/fuzz_resolve.rs"
test = false
doc = false
bench = false
