[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
flate2 = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
postcard = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
project-root = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
syn = { workspace = true }
time = { workspace = true, features = ["formatting", "macros", "parsing"] }
