[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
json5 = { workspace = true }
postcard = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
project-root = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
syn = { workspace = true }
zopfli = "0.8.3"

[lib]
test = false
doctest = false
